backpack/tests/snapshots/runner_test__run_source_dest.snap
---
source: backpack/tests/runner_test.rs
expression: "run_with_no_config(Some(\"rusty-ferris-club/backpack-e2e-frozen\"), Some(\"out\"),\n    CopyMode::Copy, false, None)"
---
Ok(
    [
        "/tests-out/content/out/.cargo/config.toml",
        "/tests-out/content/out/.github/ISSUE_TEMPLATE/bug_report.yml",
        "/tests-out/content/out/.github/ISSUE_TEMPLATE/feature_request.yml",
        "/tests-out/content/out/.github/workflows/build.yml",
        "/tests-out/content/out/.github/workflows/release.yml",
        "/tests-out/content/out/.gitignore",
        "/tests-out/content/out/Cargo.lock",
        "/tests-out/content/out/Cargo.toml",
        "/tests-out/content/out/LICENSE.txt",
        "/tests-out/content/out/README.md",
        "/tests-out/content/out/bumblefoot/Cargo.toml",
        "/tests-out/content/out/bumblefoot/build.rs",
        "/tests-out/content/out/bumblefoot/src/bin/bumblefoot.rs",
        "/tests-out/content/out/bumblefoot/src/bin/cmd/default.rs",
        "/tests-out/content/out/bumblefoot/src/bin/cmd/mod.rs",
        "/tests-out/content/out/bumblefoot/src/bin/cmd/validate.rs",
        "/tests-out/content/out/bumblefoot/src/data.rs",
        "/tests-out/content/out/bumblefoot/src/lib.rs",
        "/tests-out/content/out/bumblefoot/src/runner.rs",
        "/tests-out/content/out/media/cover.png",
        "/tests-out/content/out/media/screen.png",
        "/tests-out/content/out/xtask/Cargo.toml",
        "/tests-out/content/out/xtask/src/dual/Cargo.toml",
        "/tests-out/content/out/xtask/src/dual/src/bin/bumblefoot.rs",
        "/tests-out/content/out/xtask/src/dual/src/bin/cmd/default.rs",
        "/tests-out/content/out/xtask/src/dual/src/bin/cmd/mod.rs",
        "/tests-out/content/out/xtask/src/dual/src/bin/cmd/validate.rs",
        "/tests-out/content/out/xtask/src/main.rs",
        "/tests-out/content/out/xtask/src/simple/Cargo.toml",
        "/tests-out/content/out/xtask/src/simple/src/main.rs",
    ],
)
