backpack/tests/snapshots/runner_test__run_source_dest_single_file.snap
---
source: backpack/tests/runner_test.rs
expression: "run_with_no_config(Some(\"rusty-ferris-club/backpack-e2e-frozen/-/.github/workflows/build.yml\"),\n    Some(\"out/build.yml\"), CopyMode::Copy, false, None)"
---
Ok(
    [
        "tests-out/out/build.yml",
    ],
)
