backpack/tests/snapshots/runner_test__run_source_dest_subfolder.snap
---
source: backpack/tests/runner_test.rs
expression: "run_with_no_config(Some(\"rusty-ferris-club/backpack-e2e-frozen/-/.github\"),\n    Some(\"out\"), CopyMode::Copy, false, None)"
---
Ok(
    [
        "/tests-out/content/out/ISSUE_TEMPLATE/bug_report.yml",
        "/tests-out/content/out/ISSUE_TEMPLATE/feature_request.yml",
        "/tests-out/content/out/workflows/build.yml",
        "/tests-out/content/out/workflows/release.yml",
    ],
)
