backpack/tests/snapshots/runner_test__run_source_single_file.snap
---
source: backpack/tests/runner_test.rs
expression: "run_with_no_config(Some(\"rusty-ferris-club/backpack-e2e-frozen/-/.github/workflows/build.yml\"),\n    None, CopyMode::Apply, false,\n    Some(RunnerEvents { prompt_events: Some(vec![]), actions_events: None }))"
---
Ok(
    [
        "tests-out/build.yml",
    ],
)
