backpack/tests/snapshots/runner_test__run_with_local_project_actions_git_mode-2.snap
---
source: backpack/tests/runner_test.rs
expression: "fs::read_to_string(\"tests-out/my-project1/test.txt\").unwrap()"
---
"hello foo world\nfoo, foo world.\n"

